--- a/CSS/index.css
+++ b/CSS/index.css
@@ -435,7 +435,7 @@ footer a{
     }
 
     .iimg{
-        margin: 0;
+        margin: 10% 0;
         padding: 0;
         margin-bottom: 100px;
     }
@@ -443,7 +443,7 @@ footer a{
     .iimg img{
         width: 80%;
         height: auto;
-        margin: 0 10%;
+        margin: 30% 10%;
         border-radius: 20px;
     }
 
@@ -456,8 +456,9 @@ footer a{
         padding: 0;
         display: block;
         margin: 0;
-        margin-top: 80%;
+        margin-top: 120%;
         width: 100%;
+        height: auto;
     }
 
     .hbox{
@@ -468,7 +469,9 @@ footer a{
     .hcard{
         display: flex;
         margin: 10px auto;
-        width: 80%;
+        width: 100%;
+        height: auto;
+        overflow-x: hidden;
     }
 
     .projetos{
